updating build.gradle
- Automation running again